--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,12 +18,12 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    upstream nginx-prometheus-exporter {
-        server 127.0.0.1:9113;
-    }
-
     upstream app {
         server 127.0.0.1:8080;
+    }
+
+    upstream nginx-prometheus-exporter {
+        server 127.0.0.1:9113;
     }
 
     server {
@@ -44,25 +44,16 @@ http {
         listen       18080;
         listen  [::]:18080;
 
-        location /health/liveness {
-            proxy_pass http://nginx-prometheus-exporter/;
-        }
-
-        location /health/readiness {
-            proxy_pass http://nginx-prometheus-exporter/;
-        }
-
-        location /metrics {
-            proxy_pass http://nginx-prometheus-exporter/metrics;
-        }
-    }
-
-    server {
-        listen       18081;
-        listen  [::]:18081;
-
         location /stub_status {
             stub_status;
+        }
+
+        location /liveness {
+            proxy_pass http://nginx-prometheus-exporter/;
+        }
+
+        location /readiness {
+            proxy_pass http://nginx-prometheus-exporter/;
         }
     }
 }
